perf(core) configurable memory access backends
Close #1111